# eeg-task-scheduler

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
backend/eeg_task_scheduler/: app.py  classifier.py  config.py  db.py  gemini_client.py  notion_client.py  rag.py  rag_graph.py  session.py  time_utils.py
backend/eeg_task_scheduler/eeg/: ble.py  features.py  protocol.py
data/: app.sqlite3
desktop/: main.js  package-lock.json  package.json  preload.js
scripts/: dev.js  dev.ps1  stop.js  stop.ps1
tests/: test_ble_scan.py  test_classifier.py  test_config.py  test_database_and_rag.py  test_features.py  test_notion_client.py  test_protocol.py  test_session_episode.py
tests/ui/: app-interaction.spec.ts  electron-interaction.spec.ts
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: api.ts  main.tsx  styles.css  types.ts
