[project]
name = "eeg-task-scheduler"
version = "0.1.0"
description = "EEG, screen context, and input-log synchronized Pomodoro task scheduler."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "mne>=1.9.0",
    "bleak>=0.21.0",
    "chromadb>=0.5.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
eeg-task-scheduler = "eeg_task_scheduler.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/eeg_task_scheduler"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
